# CameraStreamingPipeline

./: CMakeLists.txt  README.md  package.xml
config/: image_streamer.yaml  pipeline_controller.yaml
data/: 3mm.yaml
include/ImageRectifier/: main.h
include/ImageStreamer/: CallbackFunction.h  CameraManager.h  FramePublisher.h  main.h
include/PipelineController/: main.h
launch/: image_rectifier.launch  image_streamer.launch  pipeline_controller.launch
modules/: FindPylon.cmake
src/ImageQualitySelector/: detect_blur.py  main.py
src/ImageRectifier/: main.cpp
src/ImageStreamer/: CameraManager.cpp  FramePublisher.cpp  main.cpp
src/PipelineController/: main.cpp
srv/: RectifyImage.srv  RequestRawImages.srv
